@@ -312,8 +312,6 @@ for a single package.
 media\-libs/libgd ~x86
 # only use stable mplayer
 media\-video/mplayer \-~x86
-# use a package that is marked \-*
->=sys\-kernel/linux\-headers\-2.6 \-*
 .fi
 .TP
 .BR package.use
